<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="0"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_operacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="0"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_resultado" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="pushButton"
        android:text="@string/ocho"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn7"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn7" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:onClick="pushButton"
        android:text="7"
        app:layout_constraintEnd_toStartOf="@+id/btn8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_operacion" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="pushButton"
        android:text="@string/nueve"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn8"
        app:layout_constraintEnd_toStartOf="@+id/btn_suma"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn8" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="pushButton"
        android:text="@string/cuatro"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn5"
        app:layout_constraintEnd_toStartOf="@+id/btn5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="pushButton"
        android:text="@string/seis"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_resta"
        app:layout_constraintEnd_toStartOf="@+id/btn_resta"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn5" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="pushButton"
        android:text="@string/cinco"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn6"
        app:layout_constraintEnd_toStartOf="@+id/btn6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn4" />

    <Button
        android:id="@+id/btn_suma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickOperacion"
        android:text="@string/suma"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn9" />

    <Button
        android:id="@+id/btn_division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="clickOperacion"
        android:text="@string/division"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_resultado"
        app:layout_constraintTop_toBottomOf="@+id/btn_multiplicar" />

    <Button
        android:id="@+id/btn_punto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="pushButton"
        android:text="@string/punto"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_resultado"
        app:layout_constraintEnd_toStartOf="@+id/btn_resultado"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn0" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="pushButton"
        android:text="@string/cero"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_punto"
        app:layout_constraintEnd_toStartOf="@+id/btn_punto"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_division"
        app:layout_constraintEnd_toStartOf="@+id/btn_division"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_punto" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="pushButton"
        android:text="@string/uno"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn2"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="pushButton"
        android:text="@string/dos"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn3"
        app:layout_constraintEnd_toStartOf="@+id/btn3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn1" />

    <Button
        android:id="@+id/btn_multiplicar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="clickOperacion"
        android:text="@string/multiplicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/btn_resta" />

    <Button
        android:id="@+id/btn_resta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="clickOperacion"
        android:text="@string/resta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn6"
        app:layout_constraintTop_toBottomOf="@+id/btn_suma" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="pushButton"
        android:text="@string/tres"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_multiplicar"
        app:layout_constraintEnd_toStartOf="@+id/btn_multiplicar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn2" />

    <Button
        android:id="@+id/btn_borrar"
        android:layout_width="81dp"
        android:layout_height="49dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="@string/borrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_operacion" />

</androidx.constraintlayout.widget.ConstraintLayout>